# rust-tracing-practice

./: Cargo.toml  README.md
otel-stdout/: Cargo.toml  README.md
otel-stdout/src/: main.rs
span-sqlx/: Cargo.toml
span-sqlx/src/: main.rs
