[package]
name = "otel-stdout"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
opentelemetry = "0.20"
opentelemetry-stdout = { version = "0.1.0", features = ["trace"] }
tracing = "0.1"
tracing-opentelemetry = "0.21"
tracing-subscriber = "0.3"
