[package]
name = "span-sqlx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite"] }
anyhow = "1"

opentelemetry = "0.20"
opentelemetry-stdout = { version = "0.1.0", features = ["trace"] }
tracing = "0.1"
tracing-opentelemetry = "0.21"
tracing-subscriber = "0.3"
